# XJTLU-autonomous-vehicle

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING-EN.md  CONTRIBUTING.md  Makefile  README.md  WORKFLOW.md  command.md  dependencies.repos  findings.md  handoff.md  progress.md  stm_skill.md  task_plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  commands.md  conventions.md  hardware_spec.md  index.md  known_issues.md  workflow.md
docs-CN/: architecture.md  commands.md  conventions.md  hardware_spec.md  index.md  known_issues.md  workflow.md
docs-CN/devlog/: 2025-11.md  2025-12.md  2026-03.md  2026-04.md  2026-05.md
docs-CN/devlog/launch_backup_20260316/: system_entire_launch_slam.py  system_entire_launch_travel.py
docs-CN/devlog/legacy/: driver_doc.md  global_planning_doc.md  perception_doc.md  project_doc.md
docs-CN/knowledge/: fastlio2.md  gps_planning.md  nav2_tuning.md  pgo.md
docs-EN/: architecture.md  commands.md  conventions.md  index.md  known_issues.md  workflow.md
docs-EN/devlog/: 2026-03.md  2026-04.md  2026-05.md
docs-EN/devlog/launch_backup_20260316/: system_entire_launch_explore.py
docs-EN/devlog/launch_backup_20260316/wit_imu_traj/: imu_trajectory.launch.py.bak_20260316
docs-EN/devlog/legacy/: driver_doc.md  global_planning_doc.md  launch_doc.md  project_doc.md
docs-EN/knowledge/: fastlio2.md  gps_planning.md  nav2_tuning.md  pgo.md
docs/devlog/: 2025-11.md  2025-12.md  2026-03.md  launch_doc.md
docs/devlog/legacy/: nav2_doc.md  perception_doc.md
docs/knowledge/: fastlio2.md  gps_planning.md  nav2_tuning.md  pgo.md
scripts/: build_scene_runtime.py  collect_gps_points.py  collect_gps_route.py  collect_gps_scene.py  collect_two_point_corridor.py  init_runtime_data.sh  launch_with_logs.sh  measure_gnss_driver_restart_repeatability.py  monitor_corridor_status.py  nav_gps_menu.py  switch_jetson_wifi.sh
scripts/data_collection/: bag_to_tum.py  record_bag.sh  record_perf.sh
src/bringup/: CMakeLists.txt  package.xml
src/bringup/behavior_trees/: navigate_to_pose_w_replanning_3hz_and_recovery.xml
src/bringup/config/: master_params.yaml  nav2_default.yaml  nav2_explore.yaml  nav2_gps.yaml  nav2_travel.yaml  pgo_corridor_no_gps.yaml
src/bringup/launch/: system_explore.launch.py  system_explore_gps.launch.py  system_gps_corridor.launch.py  system_nav_gps.launch.py  system_slam.launch.py  system_travel.launch.py
src/bringup/launch/subsystem/: Control_and_Execution_layer_launch.py  Local_planning_and_Decision_making_layer_launch.py  Perception_and_Positioning_layer_launch.py  Sensor_Driver_layer_launch.py
src/firmware/rm_c_board/: .mxproject  Makefile  README.md  RM_C_Board.ioc  startup_stm32f407xx.s
src/navigation/gps_waypoint_dispatcher/: package.xml  setup.cfg  setup.py
src/navigation/gps_waypoint_dispatcher/config/: campus_road_network.yaml
src/navigation/gps_waypoint_dispatcher/gps_waypoint_dispatcher/: dispatcher_node.py  goal_manager_node.py  goto_latlon.py  goto_name.py  gps_corridor_runner_node.py  gps_global_aligner_node.py  gps_route_runner_node.py  list_destinations.py  scene_runtime.py  stop.py
src/navigation/waypoint_collector/: README.md  package.xml  setup.py
src/navigation/waypoint_collector/waypoint_collector/: waypoint_node.py
src/navigation/waypoint_nav_tool/: package.xml  setup.cfg  setup.py
src/perception/fastlio2/: CMakeLists.txt  test_data_publisher.py  test_fastlio2.sh
src/perception/fastlio2/config/: lio.yaml  lio_backup.yaml
src/perception/fastlio2/launch/: lio_no_rviz.py
src/perception/fastlio2/rviz/: fastlio2.rviz
src/perception/fastlio2/src/: lio_node.cpp
src/perception/pgo/: CMakeLists.txt  package.xml
src/perception/pgo/config/: pgo.yaml
src/perception/pgo/launch/: pgo_launch.py
src/perception/pgo/rviz/: pgo.rviz
src/perception/pgo/src/: pgo_node.cpp
src/perception/pgo_gps_fusion/: CMakeLists.txt  CMakeLists.txt.bak_geographiclib  GPS_FUSION_CHANGELOG.md  package.xml
src/perception/pgo_gps_fusion/config/: pgo.yaml  pgo_no_gps.yaml
src/perception/pgo_gps_fusion/launch/: pgo_launch.py
src/perception/pgo_gps_fusion/rviz/: pgo.rviz
src/perception/pgo_gps_fusion/src/: pgo_node.cpp
src/perception/pointcloud_to_grid/: CMakeLists.txt  README.md  package.xml
src/perception/pointcloud_to_grid/launch/: demo.launch.py  dual_output_example.launch.py  grid_trajectory.launch.py  test_fastlio2_to_grid.launch.py
src/perception/pointcloud_to_grid/src/: grid_trajectory.cpp  pointcloud_to_grid_node.cpp
src/perception/pointcloud_to_laserscan/: CMakeLists.txt
src/perception/pointcloud_to_laserscan/config/: pointcloud_to_laserscan_params.yaml
src/planning/global2local_tf/: README.md  package.xml  setup.cfg  setup.py
src/planning/global2local_tf/global2local_tf/: global2local_tf copy20250407.py  global2local_tf copy202504082126.py  global2local_tf copy20250409.py  global2local_tf copy20250413.py  global2local_tf.py
src/planning/global2local_tf/launch/: global2local_tf.launch.py
src/planning/global_path_planning/: package.xml  setup.cfg  setup.py
src/planning/gnss_global_path_planner/: 202503302036log.txt  202503302127log.txt  20250408successlog.txt  README.md  errorlog.txt  package.xml  setup.cfg  setup.py
src/planning/gnss_global_path_planner/launch/: gnss_combined_launch.py
src/sensor_drivers/gyro_odometry/: README.md
src/sensor_drivers/gyro_odometry/src/gyro_odometry/: CMakeLists.txt  package.xml
src/sensor_drivers/gyro_odometry/src/gyro_odometry/src/: gyro_odometry.cpp
src/sensor_drivers/livox_ros_driver2/: CMakeLists.txt
src/sensor_drivers/livox_ros_driver2/src/: lddc.h  (+2 more)
src/sensor_drivers/serial/: README.md
src/sensor_drivers/serial_reader/: CMakeLists.txt  package.xml
src/sensor_drivers/serial_reader/src/: serial_reader_node copy.cpp  serial_reader_node.cpp
src/sensor_drivers/serial_twistctl/: CMakeLists.txt  README.md  package.xml
src/sensor_drivers/wit_imu_traj/: package.xml  setup.cfg  setup.py
src/sensor_drivers/wit_ros2_imu/: README.md  setup.py
(+184 files in other folders)
