<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>1.0.0</version>
  <description>FYP Autonomous Vehicle System Bringup</description>
  <maintainer email="Kevinlasnh@outlook.com">kevinlasnh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>fastlio2</exec_depend>
  <exec_depend>pgo</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>gnss_calibration</exec_depend>
  <exec_depend>serial_twistctl</exec_depend>
  <exec_depend>serial_reader</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>waypoint_collector</exec_depend>
  <exec_depend>gps_waypoint_dispatcher</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
