<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_waypoint_dispatcher</name>
  <version>1.0.0</version>
  <description>GPS waypoint dispatcher for direct goals and road-network waypoint navigation</description>
  <maintainer email="Kevinlasnh@outlook.com">FYP Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>python3-pyproj</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
