<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_collector</name>
  <version>1.0.0</version>
  <description>RViz 交互式航点收集器，使用 Publish Point 添加中间航点，使用 2D Goal Pose 触发多航点导航</description>
  <maintainer email="Kevinlasnh@outlook.com">FYP Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclpy_action</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
