<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pgo_original</name>
  <version>0.0.0</version>
  <description>PGO (Pose Graph Optimization) node with optional GPS fusion for SLAM</description>
  <maintainer email="2605400720@qq.com">zhouzhou</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  
  <!-- TF2 依赖 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- PCL 依赖 -->
  <depend>pcl_conversions</depend>
  
  <!-- 自定义接口 -->
  <depend>interface</depend>

  <!-- 系统库依赖（通过 CMake 查找） -->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>libgeographic-dev</build_depend>
  
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>libgeographic19</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
